pom.xml文件内容调整

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -1,16 +1,50 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
 	<groupId>com.github.kingchn</groupId>
 	<artifactId>meteor-util</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Meteor :: Module :: Util</name>
-	<organization>
-	</organization>
-	
-	
+	<description>
+		A Java Framework for JavaEE application reference architecture.
+	</description>
+	<url>https://github.com/kingchn/meteor-framework</url>
+	<organization></organization>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
+    <scm>
+        <connection>scm:git:git://github.com/kingchn/meteor-framework</connection>
+        <developerConnection>scm:git:git://github.com/kingchn/meteor-framework</developerConnection>
+        <url>https://github.com/kingchn/meteor-framework</url>
+    </scm>	
+	<developers>
+		<developer>
+			<id>shenjc</id>
+			<name>shenjincheng</name>
+			<email>shenjc@qq.com</email>
+		</developer>
+	</developers>
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/kingchn/meteor-framework/issues</url>
+    </issueManagement>
+    	
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.7</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		
 		<!-- 主要依赖库的版本定义 -->
 		<spring.version>4.3.7.RELEASE</spring.version><!-- 4.2.5.RELEASE 4.3.7.RELEASE -->
 		<log4j.version>2.8.1</log4j.version>
@@ -18,8 +52,7 @@
 		<commons-beanutils.version>1.8.3</commons-beanutils.version>
 		<poi.version>3.15</poi.version>
 		<orika.version>1.5.0</orika.version>
-		<junit.version>4.12</junit.version>
-		
+		<junit.version>4.12</junit.version>		
 		<!-- <commons-lang3.version>3.5</commons-lang3.version>
 		<commons-io.version>2.4</commons-io.version>
 		<hibernate.version>4.3.1.Final</hibernate.version>
@@ -28,13 +61,6 @@
 		<freemarker.version>2.3.22</freemarker.version>
 		<slf4j.version>1.7.9</slf4j.version>
 		<logback.version>1.0.13</logback.version> -->
-		
-		
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-		
 	</properties>
 
 	<dependencies>
@@ -68,8 +94,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
-		<!-- spring end -->
-		
+		<!-- spring end -->		
 		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -101,8 +126,7 @@
 			<artifactId>orika-core</artifactId>
 			<version>${orika.version}</version>
 			<!-- <optional>true</optional> -->
-		</dependency>
-		
+		</dependency>		
 		
 		<!-- test start -->
         <dependency>
@@ -116,8 +140,7 @@
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- test end -->
-		
+        <!-- test end -->		
 	</dependencies>
 	
 	<dependencyManagement>
@@ -141,42 +164,70 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- <configuration> <skip>true</skip> </configuration> -->
-			</plugin>
 		</plugins>
 	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<configuration>
-					<configLocation>${basedir}/checkstyle/my_checks.xml</configLocation>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jxr-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId>
-				<configuration>
-					<xmlOutput>true</xmlOutput>
-					<effort>Max</effort>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>dashboard-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-	            <artifactId>maven-source-plugin</artifactId>
-	        </plugin>
-		</plugins>
-	</reporting>
+
+	 <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <!-- Source -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- Javadoc -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.9.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- GPG -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.5</version>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <snapshotRepository>
+                	<id>sonatype-nexus-snapshots</id>
+					<name>Sonatype Nexus Snapshots</name>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>sonatype-nexus-staging</id>
+                    <name>Nexus Release Repository</name>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
