--- a/pom.xml
+++ b/pom.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.kingchn</groupId>
 	<artifactId>meteor-framework</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>Meteor :: Framework</name>
 	<packaging>pom</packaging>
-
-	<description>Meteor Framework</description>
-	<url>https://github.com/kingchn/meteor-framework.git</url>
-	<inceptionYear>2016-2017</inceptionYear>
-	<organization>
-	</organization>
-
+	<description>
+		A Java Framework for JavaEE application reference architecture.
+	</description>
+	<url>https://github.com/kingchn/meteor-framework</url>
+	<organization></organization>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+		</license>
+	</licenses>
+    <scm>
+        <connection>scm:git:git://github.com/kingchn/meteor-framework</connection>
+        <developerConnection>scm:git:git://github.com/kingchn/meteor-framework</developerConnection>
+        <url>https://github.com/kingchn/meteor-framework</url>
+    </scm>	
 	<developers>
 		<developer>
 			<id>shenjc</id>
 			<name>shenjincheng</name>
 			<email>shenjc@qq.com</email>
-			<roles>
-				<role>Project leader</role>
-			</roles>
-			<timezone>+8</timezone>
 		</developer>
 	</developers>
-
-	<licenses>
-		<license>
-		</license>
-	</licenses>
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/kingchn/meteor-framework/issues</url>
+    </issueManagement>
 
 </project>
