--- a/core/pom.xml
+++ b/core/pom.xml
@@ -389,18 +389,20 @@
 				</repository>
 			</distributionManagement>
 		</profile>
+        <profile>
+        	<id>release-private</id>
+        	<distributionManagement>
+				<snapshotRepository>
+					<id>private-nexus-snapshots</id>
+					<name>Private Nexus Snapshots</name>
+					<url>${private.snapshots.url}</url>
+				</snapshotRepository>
+				<repository>
+					<id>private-nexus-staging</id>
+					<name>Private Release Repository</name>
+					<url>${private.release.url}</url>
+				</repository>
+			</distributionManagement>
+        </profile>
     </profiles>
-
-	<repositories>
-		<repository>
-			<id>sonatype-nexus-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-	</repositories>
 </project>
