--- a/util/pom.xml
+++ b/util/pom.xml
@@ -224,5 +224,20 @@
                 </repository>
             </distributionManagement>
         </profile>
+        <profile>
+        	<id>release-private</id>
+        	<distributionManagement>
+				<snapshotRepository>
+					<id>private-nexus-snapshots</id>
+					<name>Private Nexus Snapshots</name>
+					<url>${private.snapshots.url}</url>
+				</snapshotRepository>
+				<repository>
+					<id>private-nexus-staging</id>
+					<name>Private Release Repository</name>
+					<url>${private.release.url}</url>
+				</repository>
+			</distributionManagement>
+        </profile>
     </profiles>
 </project>
