--- a/util/pom.xml
+++ b/util/pom.xml
@@ -226,6 +226,24 @@
         </profile>
         <profile>
         	<id>release-private</id>
+        	<build>
+        		<plugins>        		
+                    <!-- Source -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>2.2.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+        		</plugins>
+        	</build>
         	<distributionManagement>
 				<snapshotRepository>
 					<id>private-nexus-snapshots</id>
