--- a/util/pom.xml
+++ b/util/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.kingchn</groupId>
 	<artifactId>meteor-util</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>Meteor :: Module :: Util</name>
 	<description>
