--- a/core/pom.xml
+++ b/core/pom.xml
@@ -56,7 +56,7 @@
 		<hibernate.version>5.1.3.Final</hibernate.version><!-- 4.3.11.Final 5.2.5.Final 5.2.6.Final 5.1.3.Final-->
 		<freemarker.version>2.3.23</freemarker.version><!-- 2.3.22 2.3.23 -->
 		<pagehelper.version>5.0.1</pagehelper.version><!-- 3.7.3 5.0.0 -->
-		<shiro.version>1.3.2</shiro.version><!-- 1.2.3 -->
+		<shiro.version>1.4.0</shiro.version><!-- 1.2.3 1.3.2-->
 		<junit.version>4.12</junit.version>		
 	</properties>
 
@@ -287,6 +287,12 @@
 			</exclusions>
         </dependency>
 		<!-- shiro end -->
+		
+		<dependency>  
+	        <groupId>org.springframework.data</groupId>  
+	        <artifactId>spring-data-redis</artifactId>  
+	        <version>1.8.0.RELEASE</version>  
+	    </dependency>
 		
 		<dependency>
 	  		<groupId>org.apache.commons</groupId>
