--- a/core/pom.xml
+++ b/core/pom.xml
@@ -56,7 +56,8 @@
 		<hibernate.version>5.1.3.Final</hibernate.version><!-- 4.3.11.Final 5.2.5.Final 5.2.6.Final 5.1.3.Final-->
 		<freemarker.version>2.3.23</freemarker.version><!-- 2.3.22 2.3.23 -->
 		<pagehelper.version>5.0.1</pagehelper.version><!-- 3.7.3 5.0.0 -->
-		<shiro.version>1.4.0</shiro.version><!-- 1.2.3 1.3.2-->
+		<shiro.version>1.4.0</shiro.version><!-- 1.2.3 1.3.2-->		
+		<quartz.version>2.2.3</quartz.version>
 		<junit.version>4.12</junit.version>		
 	</properties>
 
@@ -267,6 +268,12 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-quartz</artifactId>
 			<version>${shiro.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.opensymphony.quartz</groupId>
+					<artifactId>quartz</artifactId>
+				</exclusion>
+			</exclusions>
         </dependency>
 
         <dependency>
@@ -306,6 +313,18 @@
 	  		<artifactId>commons-configuration</artifactId>
 	  		<version>1.7</version>
 	  	</dependency>
+	  	
+	  	<!-- TIMER -->
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>${quartz.version}</version>
+		</dependency>		
+		<!-- <dependency>
+		  <groupId>org.quartz-scheduler</groupId>
+		  <artifactId>quartz-jobs</artifactId>
+		  <version>${quartz.version}</version>
+		</dependency> -->
 		
 		<!-- test start -->
         <dependency>
