--- a/util/pom.xml
+++ b/util/pom.xml
@@ -44,6 +44,7 @@
 		<spring.version>4.3.7.RELEASE</spring.version><!-- 4.2.5.RELEASE 4.3.7.RELEASE -->
 		<log4j.version>2.8.1</log4j.version>
 		<commons-lang3.version>3.5</commons-lang3.version>
+		<commons-io.version>2.5</commons-io.version><!-- 2.4 -->
 		<commons-beanutils.version>1.8.3</commons-beanutils.version>
 		<poi.version>3.15</poi.version>
 		<orika.version>1.5.1</orika.version>
@@ -97,6 +98,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${commons-lang3.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
 		</dependency>
 	
 		<dependency>
