--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.kingchn</groupId>
 	<artifactId>meteor-core</artifactId>
-	<version>1.0.3</version>
+	<version>1.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Meteor :: Module :: Core</name>
 	<description>
@@ -45,7 +45,7 @@
 		<spring-data-jpa.version>1.11.1.RELEASE</spring-data-jpa.version><!-- 1.4.2.RELEASE 1.10.1.RELEASE 1.11.1.RELEASE -->
 		<aspectj.version>1.8.9</aspectj.version><!-- 1.7.3 1.8.9 -->
 		<servlet-api.version>3.0.1</servlet-api.version><!-- 3.0.1 3.1.0 -->
-		<meteor.version>1.0.3</meteor.version>
+		<meteor.version>1.0.4-SNAPSHOT</meteor.version>
 		<commons-io.version>2.5</commons-io.version><!-- 2.4 -->
 		<commons-fileupload.version>1.3.2</commons-fileupload.version><!-- 1.2.2 1.3.2 -->
 		<commons-collections.version>3.2.2</commons-collections.version><!-- 3.2.1 3.2.2 -->		
