--- a/core/src/test/resources/email-foresee.properties
+++ b/core/src/test/resources/email-foresee.properties
@@ -1,6 +1,6 @@
 mail.host=smtp.exmail.qq.com
 mail.port=-1
-mail.username=abc@foresee.com.cn
+mail.username=dzfpyun@foresee.com.cn
 mail.password=xxxxxx
 
 mail.smtp.auth=true
@@ -20,5 +20,5 @@ mail.smtp.socketFactory.class=
 mail.smtp.socketFactory.fallback=false
 mail.smtp.socketFactory.port=465
 
-mail.default.fromEmail=abc@foresee.com.cn
-mail.default.fromName=xxxx\u670d\u52a1\u5e73\u53f0
+mail.default.fromEmail=dzfpyun@foresee.com.cn
+mail.default.fromName=E\u7968\u4e91
