--- a/core/pom.xml
+++ b/core/pom.xml
@@ -58,6 +58,7 @@
 		<pagehelper.version>5.0.1</pagehelper.version><!-- 3.7.3 5.0.0 -->
 		<shiro.version>1.4.0</shiro.version><!-- 1.2.3 1.3.2-->		
 		<quartz.version>2.2.3</quartz.version>
+		<redis.version>2.1.5.RELEASE</redis.version><!-- 1.8.0.RELEASE -->
 		<junit.version>4.12</junit.version>		
 	</properties>
 
@@ -298,7 +299,7 @@
 		<dependency>  
 	        <groupId>org.springframework.data</groupId>  
 	        <artifactId>spring-data-redis</artifactId>  
-	        <version>1.8.0.RELEASE</version>  
+	        <version>${redis.version}</version>  
 	    </dependency>
 		
 		<dependency>
