--- a/core/pom.xml
+++ b/core/pom.xml
@@ -51,7 +51,7 @@
 		<commons-collections.version>3.2.2</commons-collections.version><!-- 3.2.1 3.2.2 -->		
 		<jodd.version>3.7</jodd.version>
 		<log4j.version>2.8.1</log4j.version>
-		<jackson.version>2.8.6</jackson.version><!-- 2.3.1 -->
+		<jackson.version>2.9.8</jackson.version><!-- 2.3.1 2.8.6-->
 		<validation-api.version>1.1.0.Final</validation-api.version>
 		<hibernate.version>5.1.3.Final</hibernate.version><!-- 4.3.11.Final 5.2.5.Final 5.2.6.Final 5.1.3.Final-->
 		<freemarker.version>2.3.23</freemarker.version><!-- 2.3.22 2.3.23 -->
