--- a/util/pom.xml
+++ b/util/pom.xml
@@ -173,6 +173,18 @@
 		    <version>${zxing.version}</version>
 		</dependency>
 		<!-- qrcode start -->
+		
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.62</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.62</version>
+		</dependency>
 
 		
 		<!-- test start -->
