新增通过本地方法生成二维码(gBig2图片格式)工具类

--- a/util/pom.xml
+++ b/util/pom.xml
@@ -175,6 +175,12 @@
             <version>${httpclient.version}</version>  
         </dependency>
         <!-- httpclient end -->
+        
+		<dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.5.0</version>
+        </dependency>
 
 		
 		<!-- test start -->
