--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.kingchn</groupId>
 	<artifactId>meteor-core</artifactId>
-	<version>1.0.4-SNAPSHOT</version>
+	<version>1.0.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Meteor :: Module :: Core</name>
 	<description>
@@ -36,7 +36,7 @@
     	
 	<properties>		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		
@@ -45,7 +45,7 @@
 		<spring-data-jpa.version>1.11.22.RELEASE</spring-data-jpa.version><!-- 1.4.2.RELEASE 1.10.1.RELEASE 1.11.1.RELEASE-->
 		<aspectj.version>1.8.9</aspectj.version><!-- 1.7.3 1.8.9 -->
 		<servlet-api.version>3.0.1</servlet-api.version><!-- 3.0.1 3.1.0 -->
-		<meteor.version>1.0.4-SNAPSHOT</meteor.version>
+		<meteor.version>1.0.5-SNAPSHOT</meteor.version>
 		<commons-io.version>2.5</commons-io.version><!-- 2.4 -->
 		<commons-fileupload.version>1.3.3</commons-fileupload.version><!-- 1.2.2 1.3.2 -->
 		<commons-collections.version>3.2.2</commons-collections.version><!-- 3.2.1 3.2.2 -->		
@@ -56,7 +56,7 @@
 		<hibernate.version>5.1.3.Final</hibernate.version><!-- 4.3.11.Final 5.2.5.Final 5.2.6.Final 5.1.3.Final-->
 		<freemarker.version>2.3.23</freemarker.version><!-- 2.3.22 2.3.23 -->
 		<pagehelper.version>5.0.1</pagehelper.version><!-- 3.7.3 5.0.0 -->
-		<shiro.version>1.4.0</shiro.version><!-- 1.2.3 1.3.2-->		
+		<shiro.version>1.5.3</shiro.version><!-- 1.2.3 1.3.2 1.4.0-->		
 		<quartz.version>2.2.3</quartz.version>
 		<junit.version>4.12</junit.version>		
 	</properties>
@@ -318,7 +318,7 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.1.9.Final</version> 
+			<version>4.1.42.Final</version> 
 		</dependency>
 	  	
 	  	<!-- TIMER -->
