--- a/core/pom.xml
+++ b/core/pom.xml
@@ -60,7 +60,7 @@
 		
 		<freemarker.version>2.3.23</freemarker.version><!-- 2.3.22 2.3.23 -->
 		<pagehelper.version>5.0.1</pagehelper.version><!-- 3.7.3 5.0.0 -->
-		<shiro.version>1.6.0</shiro.version><!-- 1.2.3 1.3.2 1.4.0 1.5.3-->
+		<shiro.version>1.7.0</shiro.version><!-- 1.2.3 1.3.2 1.4.0 1.5.3 1.6.0 -->
 		<quartz.version>2.3.2</quartz.version><!-- 2.2.3 -->
 		<commons-email.version>1.5</commons-email.version>
 		<netty.version>4.1.50.Final</netty.version><!-- 4.1.42.Final -->
